--- a/oefening-02/index.html
+++ b/oefening-02/index.html
@@ -1,19 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oefening 02</title>
 </head>
 <body>
     <table class="table">
         <caption>Overzicht boekhouding</caption>
         <thead class="thead-dark">
             <tr>
-                
+                <th scope="col">Bedrijf</th>
+                <th scope="col">Omschrijving</th>
+                <th scope="col">In</th>
+                <th scope="col">Uit</th>
             </tr>
 
         </thead>
+        <tbody>
+            <tr>
+                <td>Bike center</td>
+                <td>e-mail nieuwsbrief</td>
+                <td>&euro ;350.00</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Bakkerij</td>
+                <td>webhosting</td>
+                <td></td>
+                <td>&euro;1500.00</td>
+            </tr>
+            <tr>
+                <td>Architectuur</td>
+                <td>webdesign</td>
+                <td>&euro;5,750.00</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Krantenwinkel</td>
+                <td>domeinnaam</td>
+                <td></td>
+                <td>&euro;45.00</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="2">Totaal</td>
+                <td>&euro;6,100.00</td>
+                <td>&euro;1,545.00</td>
+            </tr>
+        </tfoot>
 
     </table>
 </body>
